# tektonian-python

./: .commitlintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  WIP.md  hatch.toml  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: semanatic-pull-request.yml
.husky/: pre-push
docs/internal/: 01-development.md  02-architecture.md  development.md
docs/publish/examples/eval/: eval_robocasa_openpi.py
scripts/: mujoco_typegen.py
simulac/: __init__.py  gym_style.py
simulac/base/envvar/: envvar.py  envvar_service.py
simulac/base/error/: error.py
simulac/base/instantiate/: graph.py  instantiate.py  service_collection.py
simulac/base/network/: network.py
simulac/base/result/: result.py
simulac/base/runtime/: runtime.py
simulac/base/test/: graph_test.py
simulac/base/types/: geometry.py
simulac/base/utils/: rotation.py
simulac/cli/: __init__.py  auth.py  benchmark.py  common.py  config.py
simulac/data_types/duckdb_types/: __init__.py
simulac/lib/gym_style/: __init__.py  gym_style_environment.py
simulac/lib/test/: benchmark_local_test.py  benchmark_test.py  entity_test.py  gym_style_environment_integration_test.py  gym_style_environment_test.py
simulac/lib/world_maker/: __init__.py  entity.py  object.py  randomize.py  runner.py
simulac/lib/world_maker/test/: world_maker_interface_test.py
simulac/sdk/: __init__.py  main.py  runtime.py  world_maker.py
simulac/sdk/asset_service/: __init__.py
simulac/sdk/environment_service/common/: environment.py  environment_build_service.py  environment_service.py  randomize.py
simulac/sdk/environment_service/common/model/: component.py  entity.py  ref.py  runtime.py
simulac/sdk/environment_service/common/utils/: mjcf_parser.py
simulac/sdk/file_service/common/: files.py
simulac/sdk/log_service/common/: log_service.py
simulac/sdk/runner_service/common/: physics_engine_adapter.py  runner.py  runner_service.py
simulac/sdk/runner_service/common/model/: runtime.py
simulac/sdk/runner_service/local/: mujoco_adapter.py  newton_adapter.py
simulac/sdk/runner_service/local/mujoco/: runtime.py
simulac/sdk/runner_service/remote/: remote_adapter.py  runner.py
simulac/sdk/telemetry_service/common/: telemetry_service.py
simulac/sdk/telemetry_service/test/: telemetry_service_test.py
simulac/sdk/world_service/common/: world_service.py
tests/: result_test.py  smolvla_libero_test.py  smolvla_meta_test.py  smolvla_smoke_test.py  smolvla_test.py  test_range1d_duckdb.py  test_tektonian_service.py
trash/: README.md  _gs.py  _mu.py  _nt.py  env-schema.example.json  random_class_proto.py
trash/assets/: door.xml
trash/assets/asset/newton-assets-main/manipulation_objects/: README.md
trash/assets/asset/newton-assets-main/manipulation_objects/rubber_duck/: README.md
trash/assets/asset/newton-assets-main/shadow_hand/: README.md
trash/assets/asset/newton-assets-main/shadow_hand/usd_structured/: README.md  left_shadow_hand.usda
trash/assets/asset/newton-assets-main/universal_robots_ur5e/: README.md
trash/assets/asset/newton-assets-main/universal_robots_ur5e/usd_structured/: README.md  ur5e.usda
trash/assets/asset/newton-assets-main/wonik_allegro/: README.md
trash/assets/asset/newton-assets-main/wonik_allegro/usd_structured/: README.md  allegro_left.usda
trash/assets/asset/roboverse/fetch/robots/: fetch.urdf
trash/assets/asset/roboverse/franka/mjcf/: README.md  mjx_panda.xml  panda.xml
trash/assets/asset/roboverse/franka/urdf/: README.md
trash/assets/asset/roboverse/franka/usd/: README.md
trash/assets/asset/roboverse/franka_allegro_hand/urdf/: allegro_left.urdf  allegro_right.urdf  franka_allegro_left.urdf  franka_allegro_right.urdf
trash/assets/asset/roboverse/franka_rlafford/robots/: franka_panda_slider_longer_sapien.urdf
trash/assets/asset/roboverse/franka_shadow_hand/mjcf/: franka_shadow_left.xml  franka_shadow_right.xml  stl2obj.py
trash/assets/asset/roboverse/franka_shadow_hand/urdf/: franka_shadow_left.urdf  shadow_left.urdf  shadow_right.urdf
trash/assets/asset/roboverse/xhand_right/urdf/: xhand_right.urdf  xhand_right.urdf.bak
trash/assets/asset/test/Basket/Basket026/: model.xml
trash/assets/asset/test/Basket/Basket034/: model.xml
trash/assets/furniture_sim/microwave/: microwave_body0.xml
tt/: __init__.py
tt/base/envvar/: envvar.py  envvar_service.py
tt/base/error/: error.py
tt/base/instantiate/: descriptor.py  extensions.py  graph.py  instantiate.py  instantiate_service.py  service_collection.py
tt/base/result/: result.py
tt/base/test/: graph_test.py
tt/bddl/: example.json
tt/cli/: auth.py
tt/data_types/duckdb_types/: __init__.py
tt/lib/gym_style/: __init__.py  gym_style_environment.py
tt/lib/test/: benchmark_test.py  entity_test.py
tt/lib/world_maker/: __init__.py  entity.py  object.py
tt/sdk/: __init__.py  main.py  runtime.py  world_maker.py
tt/sdk/environment_service/common/: environment.py  environment_build_service.py  environment_service.py
tt/sdk/environment_service/common/model/: component.py  entity.py
tt/sdk/environment_service/common/utils/: mjcf_parser.py
tt/sdk/environment_service/remote/: environment.py
tt/sdk/file_service/common/: files.py
tt/sdk/log_service/common/: log_service.py
tt/sdk/recording/common/: recording_service.py
tt/sdk/recording/common/model/: recording_model.py  video_model.py
tt/sdk/recording/server/: recording_service.py
tt/sdk/runner_service/common/: physics_engine_adapter.py  runner.py  runner_service.py
tt/sdk/runner_service/local/: mujoco_adapter.py  newton_adapter.py
tt/sdk/runner_service/remote/: remote_adapter.py  runner.py
tt/sdk/simulation_service/common/: simulation_service.py
tt/sdk/simulation_service/remote/: simulation_service.py
tt/sdk/telemetry_service/common/: telemetry.py  telemetry_service.py
tt/sdk/telemetry_service/test/: telemetry_service_test.py
tt/sdk/tt/common/: tektonian_service.py
tt/sdk/world_service/common/: world_service.py
(+19 files in other folders)
