# START - project setting
[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[project]
name = "simulac"
version = "0.0.2"
description = "A CLI, library, and local server for interacting with the Tektonian backend."
authors = [{ name = "Jeuk Kang", email = "gangjeuk@tektonian.com" }]
keywords = [
    "robotics",
    "robot-simulation",
    "simulation",
    "physics-engine",
    "mujoco",
    "newton",
    "genesis",
    "mjcf",
    "urdf",
    "usd",
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic<3",
    "duckdb>=1.4",
    "structlog>=25.5.0",
    "mujoco>=3.7.0",
    "websockets>=15.0.1",
    "typer>=0.24.1",
    "zstd>=1.5.7.3",
    "msgpack>=1.1.2",
    "requests",
]

[project.scripts]
simulac = "simulac.cli:main"

[project.urls]
Homepage = "https://tektonian.com"
Repository = "https://github.com/Tektonian/Simulac"

[project.optional-dependencies]
genesis = ["genesis-world==0.4.6", "torch>=2.11.0"]

newton = ["newton>=1.1.0", "warp-lang>=1.12.1", "mujoco-warp>=3.7.0.1"]

doc = [
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pylint==3.3.4",
    "ruff>=0.15.5",
    "pybind11-stubgen>=2.5.5",
    "typing_extensions>=4.8,<5",
    "eval_type_backport; python_version < '3.12'",
    "packaging",
    "pytest",
    "nox>=2026.2.9",
    "pytest-cov>=7.0.0",
    "numpy",
    "pillow",
    "opencv-python",
]

# END - project setting

# START - linting tool setting
[tool.ruff.lint]
select = ["E", "F", "I", "TC004"]
ignore = ["F401"]

[tool.ruff.format]
docstring-code-format = true
exclude = ["trash"]

[tool.pyright]
stubPath = ".typings"
typeCheckingMode = "strict"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

# END - linting tool setting

# START - build tool

[tool.uv.build-backend]
module-name = "simulac"
module-root = ""
source-include = ["simulac/**"]

# END - build tool

# START - testing tool
[tool.pytest.ini_options]
markers = [
    "integration: tests requiring external web service",
]
pythonpath = ["."]
# END - testing tool
